# tinfer

./: .gitignore  AGENTS.md  Dockerfile  README.md  flake.nix  grpc_512.txt  logs.txt  pyproject.toml  ttfb_requests_1_48.json
server/: .env.example  Containerfile  config.yml  main.py  observability.py  pyproject.toml  smoke_test.py
src/tinfer/: .gitignore  pyproject.toml
src/tinfer/tinfer/: errors.py
src/tinfer/tinfer/config/: engine_config.py
src/tinfer/tinfer/core/: engine.py  request.py
src/tinfer/tinfer/models/: streaming_ar.py
src/tinfer/tinfer/process/: shared_memory.py  worker.py
src/tinfer/tinfer/scheduler/: base.py  worker_scheduler.py
src/tinfer/tinfer/server/grpc/: styletts.proto  styletts_pb2_grpc.py
src/tinfer/tinfer/server/websocket/: __init__.py
src/tinfer/tinfer/utils/: audio_encoder.py
tinfer/: main.py  pyproject.toml
tinfer/espeak_align/: Cargo.toml  pyproject.toml
tinfer/espeak_align/espeak_align/: Cargo.toml
tinfer/espeak_align/espeak_align/src/: lib.rs
tinfer/espeak_align/espeak_align_core/: build.rs
tinfer/espeak_align/espeak_align_core/src/: align.rs  char_match.rs  espeak.rs  lib.rs  phonemizer_pool.rs  split.rs  tokenize.rs  utf8.rs
tinfer/tinfer/config/: engine_config.py
tinfer/tinfer/core/: async_engine.py  engine.py  request.py  scheduler.py  stream.py
tinfer/tinfer/executor/: process_executor.py
tinfer/tinfer/models/base/: model.py  voice.py
tinfer/tinfer/models/impl/styletts2/alignment/: alignment.py  converter.py
tinfer/tinfer/models/impl/styletts2/model/: batch_audio.py  batch_style.py  batch_text.py  inference_config.py  model.py  model_loading.py  model_utils.py  phonemizer.py  random_state.py  speed_correction.py  tensorrt_accelerator.py  tensorrt_config.py  text_config.py  voice_context.py
tinfer/tinfer/models/impl/styletts2/voice/: cache.py  encoder.py
tinfer/tinfer/process/: protocol.py  shared_memory.py  worker.py
tinfer/tinfer/server/: health.py
tinfer/tinfer/server/grpc/: catalog_service.py  fix_imports.py  server.py  service.py  styletts.proto  styletts_pb2.py  styletts_pb2_grpc.py
tinfer/tinfer/server/websocket/: __init__.py  audio_utils.py  capability_mapper.py  errors.py  handler.py  http_handler.py  model_resolver.py  multi_context_handler.py  query_parser.py  response_formatter.py  schemas.py  server.py  speech_parser.py  stream_context.py
tinfer/tinfer/support/: __init__.py  latency.py  observability.py  tensorrt_observability.py
tinfer/tinfer/utils/: alignment_formatter.py  audio_encoder.py  text_chunker.py
tinfer_rust/: Cargo.toml  build.rs  config.yaml
tinfer_rust/espeak_align/espeak_align/src/: lib.rs
tinfer_rust/espeak_align/espeak_align_core/: Cargo.toml
tinfer_rust/espeak_align/espeak_align_core/src/: align.rs  char_match.rs  espeak.rs  lib.rs  phonemizer_pool.rs  split.rs  utf8.rs
tinfer_rust/proto/: styletts.proto
tinfer_rust/pysbd/: Cargo.toml  NOTICE
tinfer_rust/pysbd/src/: abbreviation.rs  cleaner.rs  error.rs  lib.rs  lists.rs  processor.rs  punctuation.rs  rules.rs  text.rs
tinfer_rust/pysbd/src/lang/: am.rs  ar.rs  bg.rs  da.rs  de.rs  el.rs  en.rs  es.rs  fa.rs  fr.rs  hi.rs  hy.rs  it.rs  ja.rs  kk.rs  mod.rs  mr.rs  my.rs  nl.rs  pl.rs  ru.rs  sk.rs  ur.rs  zh.rs
tinfer_rust/pysbd/tests/: cleaner.rs  lang_a_f.rs  lang_m_z.rs  languages.rs  languages_g_l.rs  regression.rs  segmenter.rs
tinfer_rust/pysbd/tests/english_clean/: mod.rs  part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs
tinfer_rust/pysbd/tests/lang/: am.rs  ar.rs  bg.rs  da.rs  de.rs  el.rs  en.rs  es.rs  fa.rs  fr.rs  hi.rs  hy.rs  it.rs  ja.rs  kk.rs  mr.rs  my.rs  nl.rs  pl.rs  ru.rs  sk.rs  ur.rs  zh.rs
tinfer_rust/python/: Cargo.toml  pyproject.toml
tinfer_rust/python/python/tinfer/: __init__.py
tinfer_rust/python/python/tinfer/config/: __init__.py  engine_config.py
tinfer_rust/python/python/tinfer/core/: __init__.py  async_engine.py  engine.py  request.py  stream.py
tinfer_rust/python/src/: lib.rs
tinfer_rust/python/tests/: test_interface.py
tinfer_rust/src/: config.rs  lib.rs  main.rs  types.rs
tinfer_rust/src/audio/: compressed.rs  format.rs  mod.rs  mp3.rs  ogg.rs  opus.rs  pcm.rs  resample.rs  wav.rs
tinfer_rust/src/engine/: async_engine.rs  caller.rs  chunker.rs  chunker_tests.rs  coordinator.rs  engine.rs  mod.rs  registry.rs  scheduler.rs
tinfer_rust/src/models/: mod.rs
tinfer_rust/src/models/base/: mod.rs  model.rs  native.rs
tinfer_rust/src/models/base/cpp/: engine.cpp  engine.hpp  model.cpp  model.hpp  onnx.cpp  onnx.hpp  tensor.cpp  tensor.hpp  tensorrt.cpp  tensorrt.hpp
tinfer_rust/src/models/stub/: mod.rs
tinfer_rust/src/models/stub/cpp/: model.cpp  native.hpp
tinfer_rust/src/models/styletts2/: README.md  manifest.rs  mod.rs  postprocessing.rs  preprocessing.rs  stream.rs  tests.rs  text.rs
tinfer_rust/src/models/styletts2/cpp/: device.cpp  gpu.cpp  model.cpp  model.hpp  pipeline.cpp  prosody.cpp  session.hpp  window.cpp  window.hpp
tinfer_rust/src/server/: health.rs  mod.rs
tinfer_rust/src/server/grpc/: mod.rs  server.rs  wire.rs
tinfer_rust/src/server/http/: mod.rs  query.rs  schema.rs  streaming.rs
tinfer_rust/src/server/web/: mod.rs  multi.rs  server.rs  single.rs  wire.rs
tinfer_rust/tests/: async_engine.rs  audio_compressed.rs  audio_lossless.rs  config_schema.rs  engine.rs  grpc_integration.rs  model.rs  styletts2.rs  web_integration.rs
tinfer_rust/tests/artifacts/stub/: generate_review_graphs.py  manifest.toml  vocabulary.json
tinfer_rust/tests/audio_compressed/: support.rs
tinfer_rust/tests/common/: mod.rs
tinfer_rust/tests/fixtures/: audio_golden.json  chunker_cases.json  espeak_cases.json
tinfer_rust/tests/web_integration/: contracts.rs  http.rs  lifecycle.rs  multi.rs  single.rs  streaming.rs  support.rs
trtc/: README.md  pyproject.toml
trtc-builder/: README.md  pyproject.toml
trtc-builder/trtc_builder/: __init__.py
trtc/tests/: test_plan_and_server.py  test_spec.py
trtc/trtc/: __init__.py  build.py  cli.py  export.py  plan.py  remote.py  runtime.py  server.py  spec.py  vast.py
(+367 files in other folders)
