[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["server", "tinfer", "tinfer/espeak_align", "trtc", "trtc-builder"]

[tool.uv.sources]
espeak_align = { workspace = true }
trtc = { workspace = true }
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# NVIDIA's index hosts REAL tensorrt wheels; pypi.org only has a wheel_stub
# sdist that downloads them at build time — a build-time network fetch that
# breaks hermetic image builds. Non-explicit so the transitive
# tensorrt-cu12-libs/-bindings resolve here too; it only hosts NVIDIA
# packages, and locked versions/hashes keep everything else unchanged.
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

