[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["server", "tinfer", "tinfer/espeak_align"]

[tool.uv.sources]
espeak_align = { workspace = true }
trtc = { git = "https://github.com/dialohq/trtc", subdirectory = "trtc", branch = "main" }
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Real tensorrt wheels; the pypi.org sdist downloads them at build time,
# breaking hermetic image builds.
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

