[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "python-dotenv>=0.9.9",
    "pyyaml>=6.0.3",
    "tinfer[inference]",
]

[tool.setuptools]
py-modules = ["main", "smoke_test"]

[tool.uv.sources]
tinfer = { workspace = true }
