[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "opentelemetry-api>=1.37.0",
    "opentelemetry-instrumentation-grpc>=0.58b0",
    "opentelemetry-instrumentation-logging>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "python-dotenv>=0.9.9",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tinfer[inference]",
]

[tool.setuptools]
py-modules = ["main", "smoke_test"]

[tool.uv.sources]
tinfer = { workspace = true }
