[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "tinfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.76.0",
    "numpy>=2.4.2",
    "protobuf>=6.33.5",
]

[tool.setuptools.packages.find]
include = ["tinfer*"]

[project.optional-dependencies]
inference = [
    "espeak_align",
    "aiohttp>=3.13.3",
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "librosa>=0.11.0",
    "munch>=4.0.0",
    "nltk>=3.9.2",
    "pydub>=0.25.1",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "tensorrt-cu12",
    "onnx==1.22.0",
    "trtc",
]
