[project]
name = "tinfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "grpcio>=1.78.1",
    "numpy>=2.4.2",
    "protobuf>=6.33.5",
    "soundfile>=0.13.1",
    "websockets>=16.0",
]

[project.optional-dependencies]
inference = [
    "aiohttp>=3.13.3",
    "einops>=0.8.2",
    "einops-exts>=0.0.4",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "munch>=4.0.0",
    "nltk>=3.9.2",
    "phonemizer>=3.3.0",
    "pydub>=0.25.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
]
