[package]
name = "tinfer-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tinfer_rust = { path = ".." }
